--- a/css/styles.css
+++ b/css/styles.css
@@ -7,4 +7,16 @@
 }
 
 body {
+  > header {
+    padding: 0.5rem 0 0.5rem 2rem;
+  }
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  padding: 0.25rem 0 0.25rem 0;
+  background-color: var(--colorSecondary);
 }
