added a trashcan image

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,15 @@
 body {
   > header {
     padding: 0.5rem 0 0.5rem 2rem;
+    background-color: var(--colorSecondary);
+    color: var(--colorTextSecondary);
+    text-align: left;
   }
+}
+
+main {
+  padding: 2rem;
+  line-height: 1.4rem;
 }
 
 footer {
@@ -19,4 +27,14 @@ footer {
   text-align: center;
   padding: 0.25rem 0 0.25rem 0;
   background-color: var(--colorSecondary);
+  color: var(--colorTextSecondary);
+}
+
+.deleteBtn {
+  background: url("/assets/trashcan.png") no-repeat center center;
+  background-size: contain;
+  border: none;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
 }
