--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,10 @@ body {
     color: var(--colorTextSecondary);
     text-align: left;
   }
+  @media (min-width: 1024px) {
+    max-width: var(--maxWidth);
+    margin: 0 auto;
+  }
 }
 
 main {
@@ -28,13 +32,67 @@ footer {
   padding: 0.25rem 0 0.25rem 0;
   background-color: var(--colorSecondary);
   color: var(--colorTextSecondary);
+  @media (min-width: 768px) {
+    position: fixed;
+    max-width: var(--maxWidth);
+  }
+}
+
+form {
+  display: grid;
+  gap: 1rem;
+  max-width: 30rem;
+
+  #addBtn {
+    width: 5rem;
+    height: 3rem;
+    padding: 0.5rem;
+  }
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 2rem;
+}
+
+th,
+td {
+  border: 1px solid #ddd;
+  padding: 0.5rem;
+  text-align: left;
+}
+
+th {
+  background-color: var(--colorSecondary);
+  color: var(--colorTextSecondary);
+}
+
+td {
+  background-color: #f9f9f9;
+}
+
+td:last-child {
+  width: 3rem;
 }
 
 .deleteBtn {
   background: url("/assets/trashcan.png") no-repeat center center;
   background-size: contain;
   border: none;
-  width: 50px;
-  height: 50px;
+  width: 3rem;
+  height: 3rem;
   cursor: pointer;
+}
+
+field.text {
+  display: grid;
+  gap: 0.2rem;
+}
+field.text input {
+  padding: 0.2rem 0.4rem;
+}
+
+label {
+  font-weight: bold;
 }
