fixed use of xhtml. removed field tags made into divs. moved all colors into variables. redid some javascript by using e.target.name.value to make it abit more efficient. made addeventlistener into a normal function and not arrow function, so i can use this.reset(). moved const cdtable into the eventlistener so it only loads with button press

--- a/css/variables.css
+++ b/css/variables.css
@@ -4,5 +4,8 @@
   --colorSecondary: red;
   --colorTextSecondary: floralwhite;
 
+  --backgroundColortd: #f9f9f9;
+  --colorTableBorder: #ddd;
+
   --maxWidth: 1024px;
 }
