--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import "variables.css";
+@import "/css/variables.css";
 
 * {
   margin: 0;
@@ -59,7 +59,7 @@ table {
 
 th,
 td {
-  border: 1px solid #ddd;
+  border: 1px solid var(--colorTableBorder);
   padding: 0.5rem;
   text-align: left;
 }
@@ -70,7 +70,7 @@ th {
 }
 
 td {
-  background-color: #f9f9f9;
+  background-color: var(--backgroundColortd);
 }
 
 td:last-child {
@@ -86,11 +86,11 @@ td:last-child {
   cursor: pointer;
 }
 
-field.text {
+div.text {
   display: grid;
   gap: 0.2rem;
 }
-field.text input {
+div.text input {
   padding: 0.2rem 0.4rem;
 }
 
