--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  box-sizing: border-box; /* Always write that for *, meaning targeting the whole page. */
 }
 
 body {
